[FIX] web: fix folded kanban header's drag and drop state
Prior this commit, there was a problem with borders that were not
displayed on the kanban header when the stage was folded and the user
was trying to drag and drop in that stage.

This commit removes the background set on `.o_kanban_header` when the
stage is folded, so it doesn't overlap and hide the border set on
`.o_kanban_group`. We can do that safely because a folded stage
can't be scrolled

task-3423682
part of task-3326263

closes odoo/odoo#129551

X-original-commit: b6cb9fed6aa46591e692e67267a7419fe15f8c68

--- a/addons/web/static/src/views/kanban/kanban_controller.scss
+++ b/addons/web/static/src/views/kanban/kanban_controller.scss
@@ -533,7 +533,7 @@
         padding: 0 var(--KanbanGroup-padding-h) var(--KanbanGroup-padding-bottom);
     }
 
-    .o_kanban_group .o_kanban_header, .o_quick_create_folded {
+    .o_kanban_group:not(.o_column_folded) .o_kanban_header, .o_quick_create_folded {
         background: inherit;
     }
 
